# synthetic_data_release

./: inference_cli.py  linkage_cli.py  pyproject.toml  utility_cli.py
.github/workflows/: ci.yaml
executables/: generate_synthetic_dataset.py
export/: bayesian_network.py  transformer.py
tests/: test_export.py  test_gms.py
