[tool.poetry]
name = "synthetic_data_release"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "1.19.5"
husl = "4.0.3"
loguru = "0.5.3"
matplotlib = "3.4.3"
palettable = "3.3.0"
pandas = "0.25.3"
scipy = "1.7.1"
seaborn = "0.11.2"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
